# hid-test

./: .gitignore  configure.ac  kill.sh
src/: Makefile.am  compare_evemu.py  database.py  evdev.py  hid_test.py  testsuite.py  testsuite.txt  xi2detach.c  xi2detach.txt  xi2dettach.c
